--- a/style/fonts.scss
+++ b/style/fonts.scss
@@ -58,3 +58,18 @@ $font-family-monospace: 'Fira Code';
        url("style/fonts/JetBrainsMono-Regular.woff2") format("woff2") /* Chrome 26+, Opera 23+, Firefox 39+ */
       //  url("style/fonts/FiraCode-Regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Petrona:ital,wght@0,400;0,500;1,400&display=swap');
+
+
+h1, h2, h3 {
+    font-family: "Petrona", serif;
+  }
+  
+  h4, h5, h6 {
+    font-family: 'Red Hat Text', sans-serif;
+    font-weight: 300;
+  }
